istio-yaml/istio-dest-rule-canary.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: aleph
  namespace: games
spec:
  host: aleph
  subsets:
    - name: production
      labels:
        version: v02
    - name: canary
      labels:
        version: v02
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: beth
  namespace: games
spec:
  host: beth
  subsets:
    - name: production
      labels:
        version: v03
    - name: canary
      labels:
        version: v03
