istio-yaml/istio-fault-aleph.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: aleph
  namespace: games
spec:
  hosts:
  - aleph
  http:
  - fault:
      delay:
        fixedDelay: 7s
        percent: 100
    match:
    - headers:
        cookie:
          regex: "^(.*?;)?(user=developer)(;.*)?$"
    route:
    - destination:
        host: aleph
        port:
          number: 80
        subset: v03
  - route:
    - destination:
        host: aleph
        port:
          number: 80
        subset: v02
