istio-yaml/istio-route-rule-aleph-canary-no-bw.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: aleph
  namespace: games
spec:
  hosts:
  - aleph
  http:
  - route:
    - destination:
        host: aleph
        port:
          number: 80
        subset: v02
      weight: 80
    - destination:
        host: aleph
        port:
          number: 80
        subset: v03
      weight: 20
