istio-yaml/istio-rule-alep02-beth03.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: aleph
  namespace: games
spec:
  hosts:
  - aleph
  http:
  - route:
    - destination:
        host: aleph
        port:
          number: 80
        subset: v02
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: beth
  namespace: games
spec:
  hosts:
  - beth
  http:
  - route:
    - destination:
        host: beth
        port:
          number: 80
        subset: v03
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: aleph
  namespace: games 
spec:
  host: aleph
  subsets:
    - name: v02
      labels:
        version: v02
    - name: v03
      labels:
        version: v03
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: beth
  namespace: games
spec:
  host: beth
  subsets:
    - name: v02
      labels:
        version: v02
    - name: v03
      labels:
        version: v03
